# modelAPI

./: .gitignore  Makefile  README.md  data_generator.py  face_extractor.py  multiply.py  vgg-face-api.cpp  vgg-face-api.h  vgg-face.py
examples/: CMakeCache.txt  CMakeLists.txt  Example  Makefile  cmake_install.cmake  main.cpp  recognition_model.h5
examples/modelAPI_build/: Makefile  cmake_install.cmake
modelAPI/: CMakeLists.txt  README.md  face_extractor.py  requirements.txt  vgg-face-api.cpp  vgg-face-api.h  vgg-face.py
src/: CMakeLists.txt  Makefile  README.md  main.cpp  vgg-face-api.cpp  vgg-face.py
